--- a/src/main/webapp/VAADIN/themes/dashboard/styles.css
+++ b/src/main/webapp/VAADIN/themes/dashboard/styles.css
@@ -14427,7 +14427,8 @@ div.v-layout.v-horizontal.v-widget {
 
 .dashboard .item-interator {
 	border-bottom: #a3a3a3 solid 1px;
-	max-height: 55px;
+	max-height: 90px;
+	min-height: 55px;
 	cursor: pointer;
 }
 
@@ -14532,4 +14533,8 @@ div.v-layout.v-horizontal.v-widget {
 	box-shadow: none;
 	background: none;
 	border: none;
+}
+
+.dashboard .wizard-layout {
+	overflow: scroll;
 }
